Bug 1122900: Make libyuv compile with MSVC 2015, r=rjesup.

MSVC 2015 CTP 6 refuses to compile the code with these, and MSVC
already aligns functions at 16 byte boundaries in its normal
configuration.